# CLInGER

./: README.md
Appendices/Appendix A.1 - CONOPs and Design Requirements/: Concept of Operation.docx  Design Requirements.docx
Appendices/Appendix A.10 - Motion Analysis Codes/: Group_3_VideoTracking.py  IMU_vs_expected.m  video_graph_plotting.m
Appendices/Appendix A.11 - Modelling and Simulation Code/: ContinuumMotion.m  InverseKinematics.m  MEngDissKinematicsCheck.m  ThreeDoFMotion.m
Appendices/Appendix A.12 - Electronic Design Files/: PiPico_Pinout.SchDoc  power_breakout.SchDoc  shiftReg1.SchDoc
Appendices/Appendix A.2 - Risk Registers/: Appendix - Mitigating Risks.xlsx  Risk Register - Demo.docx  Risk Register - Mid May.docx  Risk Register - Sem 1.docx  Risk Register - Sem2 Update.docx
Appendices/Appendix A.4 - Team Charter/: Buddy System.docx  Workplace Charter Team 3.docx
Appendices/Appendix A.5 - Gantt Charts and Task Tracking/: Actions Backlog.xlsx  deliverables_calendar.xlsx  term_plan.docx
Appendices/Appendix A.6 - Raspberry Pi Code/: continuum.py  gantry_marker.py  side_distance_mapper.py  (+1 more)
CAD_and_verification/: Micro Servo V2.step  assemblyAll.step  motorhousing.SLDPRT  servoattach.SLDPRT  sparsAssembled v1.step
Camera System/: README.md
Control/: README.md
Control/Rasberry_pi/src/controller_pkg/: package.xml  setup.py
Control/Rasberry_pi/src/controller_pkg/controller_pkg/: ps4_to_uart.py  uart_sub.py  visualisation.py
Control/Rasberry_pi/src/controller_pkg/launch/: controller.launch.py
Report/: README.md  report_link
(+95 files in other folders)
