<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mscrobotic2324laptop7@todo.todo">mscrobotic2324laptop7</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>custom_interface_package</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
  
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>